# klingel

./: CMakeLists.txt  README.md  bootloader.c  bootloader.s  disp.s  main.c  stk500.h
electrical_CAD/gerber/: AGS_Klingel_V2-1-B_Cu.gbr  AGS_Klingel_V2-1-B_Mask.gbr  AGS_Klingel_V2-1-B_Paste.gbr  AGS_Klingel_V2-1-B_Silkscreen.gbr  AGS_Klingel_V2-1-Edge_Cuts.gbr  AGS_Klingel_V2-1-F_Cu.gbr  AGS_Klingel_V2-1-F_Mask.gbr  AGS_Klingel_V2-1-F_Paste.gbr  AGS_Klingel_V2-1-F_Silkscreen.gbr  AGS_Klingel_V2-1-job.gbrjob  AGS_Klingel_V2-1.drl
mechnical_CAD/: 01-gehaeuse.stp  02-fenster.stp  03-isolator.stl  03-isolator.stp  gehaeuse_dxf.dxf  klingel_asm_asm.stp
